--- a/src_hd/ch/axonivy/casemap/GirlInfo/GirlInfo.xhtml
+++ b/src_hd/ch/axonivy/casemap/GirlInfo/GirlInfo.xhtml
@@ -10,11 +10,7 @@
 	<ui:composition template="/layouts/basic.xhtml">
 		<ui:define name="title">GirlInfo</ui:define>
 		<ui:define name="content">
-			<h3>
-			This is an <a href="http://developer.axonivy.com/doc/latest/DesignerGuideHtml/ivy.userinterface.html#ivy-htmldialogs">Html Dialog</a> 
-			implemented with JSF and <a href="http://primefaces.org/">Primefaces</a> as widget library
-			</h3>
-			
+			<h3>Find a girl</h3>
 			<h:form id="form">
 				<h:panelGrid columns="2">
 					<f:facet name="header">
